# Nova-Core

./: CMakeLists.txt  README.md  vcpkg.json
root/core/: CMakeLists.txt
root/core/include/: core.h  structs.hpp
root/core/include/Nova/Core/: core.h
root/core/src/: core.cpp
